--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "email-validator": "^2.0.3",
     "express": "^4.16.3",
     "mongoose": "^5.1.3",
+    "mongoose-auto-increment": "^5.0.1",
+    "mongoose-unique-validator": "^2.0.1",
     "nodemon": "^1.17.5"
   }
 }
