--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.16.3",
     "mongoose": "^5.1.3",
     "mongoose-auto-increment": "^5.0.1",
+    "mongoose-ref-validator": "^1.0.21",
     "mongoose-unique-validator": "^2.0.1",
     "nodemon": "^1.17.5"
   }
